--- a/app/src/main/res/layout/item_hq.xml
+++ b/app/src/main/res/layout/item_hq.xml
@@ -26,6 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/hqNumber"
+        android:textStyle="bold"
         android:textColor="@color/white"
         android:layout_marginHorizontal="10dp"
         android:layout_marginBottom="5dp"/>
