--- a/app/src/main/res/layout/activity_description.xml
+++ b/app/src/main/res/layout/activity_description.xml
@@ -47,7 +47,8 @@
                 android:id="@+id/ivHqImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="5dp" />
+                android:layout_margin="5dp"
+                android:clickable="true"/>
         </LinearLayout>
 
         <TextView
