--- a/app/src/main/res/layout/activity_hq_amp.xml
+++ b/app/src/main/res/layout/activity_hq_amp.xml
@@ -14,19 +14,20 @@
         android:layout_margin="20dp"
         android:src="@drawable/ic_close"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:clickable="true"/>
 
     <LinearLayout
         android:id="@+id/llHqAmp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginHorizontal="40dp"
-        android:layout_marginVertical="80dp"
+        android:layout_marginVertical="90dp"
         android:background="@drawable/border_hq"
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
-            android:id="@+id/ivHqImage"
+            android:id="@+id/ivHqAmpImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
